--- a/2022/day_13/solution_13.ipynb
+++ b/2022/day_13/solution_13.ipynb
@@ -6,7 +6,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# day 13 part 1"
+    "# day 13 part 1\n",
+    "\n",
+    "\n"
    ]
   }
  ],
